UtilMisc: added null checks and changed varargs due to compile warnings